--- a/app/src/main/res/layout/fragment_health_records_page.xml
+++ b/app/src/main/res/layout/fragment_health_records_page.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".health_records_page">
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <!-- Note: A RecyclerView can also be used -->
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <!-- Scrollable content -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,22 +48,18 @@
 
             </LinearLayout>
 
-            <Space
+            <androidx.legacy.widget.Space
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:backgroundTint="@android:color/white"
-                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                 android:padding="15dp"
 
                 android:text="Clinical Documents"
@@ -80,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:backgroundTint="@android:color/white"
-                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                 android:padding="15dp"
                 android:text="Doctor Consultation"
                 android:textAlignment="textStart"
@@ -92,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:backgroundTint="@android:color/white"
-                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                 android:padding="15dp"
                 android:text="Test Repost"
                 android:textAlignment="textStart"
@@ -117,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:backgroundTint="@android:color/white"
-                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                 android:padding="15dp"
                 android:text="vaccination reports"
                 android:textAlignment="textStart"
@@ -129,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:backgroundTint="@android:color/white"
-                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                 android:padding="15dp"
                 android:text="Bills"
                 android:textAlignment="textStart"
@@ -141,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:backgroundTint="@android:color/white"
-                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                 android:padding="15dp"
                 android:text="Insurance"
                 android:textAlignment="textStart"
@@ -149,7 +141,9 @@
                 app:elevation="5dp" />
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+</FrameLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
