--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@color/teal_200"
-        android:src="@drawable/rectangle_1210"
+        android:src="@drawable/demoimg3"
         />
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
