--- a/app/src/main/res/layout/fragment_address_book.xml
+++ b/app/src/main/res/layout/fragment_address_book.xml
@@ -34,85 +34,31 @@
             android:textSize="20dp"
             android:textStyle="bold" />
     </RelativeLayout>
-    <androidx.cardview.widget.CardView
+<!--    <LinearLayout-->
+<!--        android:layout_below="@id/toolbars"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="vertical">-->
+<!--    <include layout="@layout/address_card"/>-->
+<!--        <include layout="@layout/address_card"/>-->
+<!--    </LinearLayout>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/addressrecycleview"
         android:layout_width="match_parent"
-        android:id="@+id/address_1"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbars"
-        app:cardElevation="20dp"
-        app:cardCornerRadius="25dp"
-        android:layout_margin="15dp"
-        >
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20sp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/address1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:paddingLeft="8dp"
-                    android:text="Jane Doe"
-                    android:layout_weight="1"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/editadd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:backgroundTint="@color/white"
-                    android:text="Edit"
-                    android:textColor="@color/teal_200"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/address2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="3 Newbridge court"
-                android:textSize="18dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="Chino Hills,CA 91709, United States"
-                android:textSize="18dp" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="Use as shipping address" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbars"/>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/Addaddressbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="50dp"
-        app:srcCompat="@drawable/ic_round_add_24" />
+        app:srcCompat="@drawable/ic_round_add_24"
+        android:contentDescription="addaddress" />
 
 
 </RelativeLayout>
