--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -4,20 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:padding="20dp"
     tools:context=".search_medicine">
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+<!--    <SearchView-->
+<!--        android:id="@+id/searchView2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
 
-        android:layout_margin="5dp"
-        android:background="@drawable/searchview"
-        android:elevation="6dp"
-        android:gravity="start"
-        android:iconifiedByDefault="false"
-        android:padding="5dp"
-        android:queryBackground="@android:color/transparent"
-        android:queryHint="Search" />
+<!--        android:layout_margin="5dp"-->
+<!--        android:background="@drawable/searchview"-->
+<!--        android:elevation="6dp"-->
+<!--        android:gravity="start"-->
+<!--        android:iconifiedByDefault="false"-->
+<!--        android:padding="5dp"-->
+<!--        android:queryBackground="@android:color/transparent"-->
+<!--        android:queryHint="Search" />-->
+<!--=======-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    tools:context=".search_medicine"-->
+<!--    android:padding="20dp">-->
+<!--    <SearchView-->
+<!--        android:id="@+id/searchView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="57dp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginStart="4dp"-->
+
+<!--        android:background="@drawable/searchview"-->
+<!--        android:elevation="6dp"-->
+<!--        android:iconifiedByDefault="false"-->
+<!--        android:padding="5dp"-->
+<!--        android:queryBackground="@android:color/transparent"-->
+<!--        android:queryHint="Search here"-->
+<!--        />-->
+
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/search_view"
+        app:queryHint="Search your Medicine"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/searchrecyleview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:alwaysDrawnWithCache="true" />
+
+<!--&gt;>>>>>> Stashed changes-->
 </FrameLayout>
