--- a/app/src/main/res/layout/fragment_needhelp.xml
+++ b/app/src/main/res/layout/fragment_needhelp.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/customer_care"
+            android:drawablePadding="5dp"
             android:fontFamily="@font/work_sans_bold"
             android:padding="10dp"
             android:text="Contact us"
@@ -26,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/info"
+            android:drawablePadding="5dp"
             android:fontFamily="@font/work_sans_bold"
             android:padding="10dp"
             android:text="About us"
@@ -36,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/info"
+            android:drawablePadding="5dp"
             android:fontFamily="@font/work_sans_bold"
             android:padding="10dp"
             android:text="Return policy"
@@ -46,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/info"
+            android:drawablePadding="5dp"
             android:fontFamily="@font/work_sans_bold"
             android:padding="10dp"
             android:text="FAQs"
@@ -56,6 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/info"
+            android:drawablePadding="5dp"
             android:fontFamily="@font/work_sans_bold"
             android:padding="10dp"
             android:text="Terms and Conditions"
@@ -66,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/policy"
+            android:drawablePadding="5dp"
             android:fontFamily="@font/work_sans_bold"
             android:padding="10dp"
             android:text="Privacy policy"
