--- a/app/src/main/res/layout/fragment_upload_options_prescription.xml
+++ b/app/src/main/res/layout/fragment_upload_options_prescription.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listbottomsheet"
+    style="@style/Widget.MaterialComponents.BottomSheet.Modal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bottomsheet_background"
