--- a/app/src/main/res/layout/fragment_upload_prescription.xml
+++ b/app/src/main/res/layout/fragment_upload_prescription.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".upload_prescription"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/upload_prescription">
 
     <ImageView
         android:layout_width="match_parent"
