--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -1,59 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    android:padding="20dp"
-    tools:context=".search_medicine">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
 
-<!--    <SearchView-->
-<!--        android:id="@+id/searchView2"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:layout_margin="5dp"-->
-<!--        android:background="@drawable/searchview"-->
-<!--        android:elevation="6dp"-->
-<!--        android:gravity="start"-->
-<!--        android:iconifiedByDefault="false"-->
-<!--        android:padding="5dp"-->
-<!--        android:queryBackground="@android:color/transparent"-->
-<!--        android:queryHint="Search" />-->
-<!--=======-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    tools:context=".search_medicine"-->
-<!--    android:padding="20dp">-->
-<!--    <SearchView-->
-<!--        android:id="@+id/searchView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="57dp"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginStart="4dp"-->
-
-<!--        android:background="@drawable/searchview"-->
-<!--        android:elevation="6dp"-->
-<!--        android:iconifiedByDefault="false"-->
-<!--        android:padding="5dp"-->
-<!--        android:queryBackground="@android:color/transparent"-->
-<!--        android:queryHint="Search here"-->
-<!--        />-->
-
-    <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/search_view"
-        app:queryHint="Search your Medicine"/>
+        android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchrecyleview"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:background="@drawable/searchview"
+            android:backgroundTint="@android:color/white"
+            android:elevation="6dp"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="Search your Medicine">
+
+        </androidx.appcompat.widget.SearchView>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:alwaysDrawnWithCache="true" />
 
-<!--&gt;>>>>>> Stashed changes-->
-</FrameLayout>
+
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:padding="20dp"
+            tools:context=".search_medicine">
+
+            <!--    <SearchView-->
+            <!--        android:id="@+id/searchView2"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+
+            <!--        android:layout_margin="5dp"-->
+            <!--        android:background="@drawable/searchview"-->
+            <!--        android:elevation="6dp"-->
+            <!--        android:gravity="start"-->
+            <!--        android:iconifiedByDefault="false"-->
+            <!--        android:padding="5dp"-->
+            <!--        android:queryBackground="@android:color/transparent"-->
+            <!--        android:queryHint="Search" />-->
+            <!--=======-->
+            <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+            <!--    tools:context=".search_medicine"-->
+            <!--    android:padding="20dp">-->
+            <!--    <SearchView-->
+            <!--        android:id="@+id/searchView"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="57dp"-->
+            <!--        android:layout_alignParentStart="true"-->
+            <!--        android:layout_alignParentTop="true"-->
+            <!--        android:layout_centerHorizontal="true"-->
+            <!--        android:layout_marginStart="4dp"-->
+
+            <!--        android:background="@drawable/searchview"-->
+            <!--        android:elevation="6dp"-->
+            <!--        android:iconifiedByDefault="false"-->
+            <!--        android:padding="5dp"-->
+            <!--        android:queryBackground="@android:color/transparent"-->
+            <!--        android:queryHint="Search here"-->
+            <!--        />-->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/searchrecyleview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:alwaysDrawnWithCache="true" />
+
+            <!--&gt;>>>>>> Stashed changes-->
+        </FrameLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
