--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -328,6 +328,7 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/proceedtopay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
